[gd_scene load_steps=11 format=3 uid="uid://dct587wgad7ik"]

[ext_resource type="Script" path="res://Water.gd" id="1_hkw8h"]
[ext_resource type="Texture2D" uid="uid://cjylfw3iflkt" path="res://SonicMarsh/Water/water splash - sonic and marsh.png" id="2_f76kx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qpkmn"]
atlas = ExtResource("2_f76kx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_layw4"]
atlas = ExtResource("2_f76kx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60ahu"]
atlas = ExtResource("2_f76kx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e24r"]
atlas = ExtResource("2_f76kx")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uu0f"]
atlas = ExtResource("2_f76kx")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4th8"]
atlas = ExtResource("2_f76kx")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_amitt"]
atlas = ExtResource("2_f76kx")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tsadt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpkmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_layw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60ahu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e24r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uu0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4th8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amitt")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="Water" type="Node2D"]
position = Vector2(12475, 752)
script = ExtResource("1_hkw8h")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1679.75, 325.5)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 3
offset_left = -569.0
offset_top = -38.0
offset_right = 3653.0
offset_bottom = 533.0
color = Color(0.0941176, 0, 1, 0.419608)

[node name="WaterSplash" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -54)
sprite_frames = SubResource("SpriteFrames_tsadt")
frame = 6
frame_progress = 1.0

[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="WaterSplash" to="." method="_on_water_splash_animation_finished"]
